# fastapi-sqlmodel-project

./: README.md  app.py  database.db  main.py  pyproject.toml
