[tool.poetry]
name = "fastapi-sqlmodel-project"
version = "0.1.0"
description = ""
authors = ["tyndev <17089219+tyndev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
